syntax = "proto3";

package image.acquisition.v1;

option go_package = './;v1';

message LoginRequest {
    string user_name = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    int32 expires_in = 2;
    // oauth2
}

message RegisterRequest {
    string user_name = 1;
    string password = 2;
}

message RegisterResponse {
    string access_token = 1;
    int32 expires_in = 2;
    // oauth2
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}